@@ -1,3 +1,10 @@
+2003-07-16  Royce Mitchell III <royce3@ev1.net>
+
+	* integrated Art Yerkes' _ftime implementation at
+	lib/msvcrt/time/ftime.c
+	* fixed ungetc warning in lib/msvcrt/stdio/vfscanf.c (also
+	renamed ungetc macro to UNGETC for clarity)
+
 2003-07-15  Royce Mitchell III <royce3@ev1.net>
 
 	* fixed references to errno in MSVCRT to use __set_errno() and
